--- a/OLAP/Views/Home/Manage.cshtml
+++ b/OLAP/Views/Home/Manage.cshtml
@@ -50,94 +50,11 @@
 </div>
 
 <div id="right">
-    <div class="navbar">
-        <div class="navbar-inner">
-            <span class="brand">Меры</span>
-            <div class="columnButtons">
-                <a href="#addNewMeasure" role="button" class="btn btn-success" data-toggle="modal">Добавить...</a>
-                <a href="#" id="delMeas" role="button" class="btn btn-danger disabled">Удалить</a>
-            </div>
-        </div>
-    </div>
-
-    <div class="modal hide" id="addNewMeasure" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-        <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-            <h3 id="myModalLabel">Добавить меру</h3>
-        </div>
-        <div class="modal-body">
-            <label>Введите название</label>
-            <input type="text" placeholder="Введите текст…">
-            <label>Выберите поле</label>
-            <select class="SelMeas">
-                <option>1</option>
-                <option>2</option>
-                <option>3</option>
-                <option>4</option>
-                <option>5</option>
-             </select>
-        </div>
-        <div class="modal-footer">
-            <button class="btn" data-dismiss="modal" aria-hidden="true">Отмена</button>
-            <button class="btn btn-primary">Добавить</button>
-        </div>
-    </div>
-
-     <select size="2" class="selectData SelMeas">
-        <option>1</option>
-        <option>2</option>
-        <option>3</option>
-        <option>4</option>
-        <option>5</option>
-    </select>
+    @Html.Partial("ShowMeasures");
 </div>
 
 <div id="center">
-    <div class="navbar">
-        <div class="navbar-inner">
-            <span class="brand">Измерения</span>
-            <div class="columnButtons">
-                <a href="#addNewDimension" role="button" class="btn btn-success" data-toggle="modal">Добавить...</a>
-                <a href="#" id="delDim" role="button" class="btn btn-danger disabled">Удалить</a>
-            </div>
-        </div>
-    </div>
-
-    <div class="modal hide" id="addNewDimension" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-        <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-            <h3 id="myModalLabel">Добавить измерение</h3>
-        </div>
-        <div class="modal-body">
-            <label>Введите название</label>
-            <input type="text" placeholder="Введите текст…">
-            <label>Выберите таблицу</label>
-            <select  class="SelDim">
-                <option>1</option>
-                <option>2</option>
-                <option>3</option>
-                <option>4</option>
-                <option>5</option>
-             </select>
-        </div>
-        <div class="modal-footer">
-            <button class="btn" data-dismiss="modal" aria-hidden="true">Отмена</button>
-            <button class="btn btn-primary">Добавить</button>
-        </div>
-    </div>
-
-    @*<h5 class="columnLabel">Измерения</h5>
-    <div class="columnButtons">
-        <a href="#" role="button" class="btn btn-success">Добавить...</a>
-        <a href="#" role="button" class="btn btn-danger">Удалить</a>
-    </div>*@
-    <select id="SelDim" size="2" class="selectData SelDim">
-        <option>1</option>
-        <option>2</option>
-        <option>3</option>
-        <option>4</option>
-        <option>5</option>
-    </select>
+    @Html.Partial("ShowDimensions");
 </div>
 
 <script>
