--- a/OLAP/Views/Home/ShowMeasures.cshtml
+++ b/OLAP/Views/Home/ShowMeasures.cshtml
@@ -2,7 +2,7 @@
         <div class="navbar-inner">
             <span class="brand">Меры</span>
             <div class="columnButtons">
-                <a href="#addNewMeasure" role="button" class="btn btn-success" data-toggle="modal">Добавить...</a>
+                <a href="#addNewMeasure" id="addMeas" role="button" class="btn btn-success disabled" data-toggle="modal">Добавить...</a>
                 <a href="#" id="delMeas" role="button" class="btn btn-danger disabled">Удалить</a>
             </div>
         </div>
@@ -14,24 +14,56 @@
             <h3 id="myModalLabel">Добавить меру</h3>
         </div>
         <div class="modal-body">
+            <div id="newMeasError" class="alert alert-error hide">
+                <button type="button" class="close" data-dismiss="alert">&times;</button>
+                <strong>Ошибка!</strong> Все поля должны быть заполнены.
+            </div>
+            @using (Html.BeginForm("AddMeasure", "Home", FormMethod.Post, new { enctype = "multipart/form-data", id = "newMeasForm" }))
+            {
+            <input type="text" id="newMeasDimName"  style="position: absolute; visibility: hidden" name="dimName" />
             <label>Введите название</label>
-            <input type="text" placeholder="Введите текст…">
+            <input type="text" id="newMeasName" placeholder="Введите текст…" name="name">
             <label>Выберите поле</label>
-            <select class="SelMeas">
+            <select id="newMeasSel" class="SelMeas" name="columnName">
+                <option>dsfasdf</option>
              </select>
+            }
         </div>
         <div class="modal-footer">
             <button class="btn" data-dismiss="modal" aria-hidden="true">Отмена</button>
-            <button class="btn btn-primary">Добавить</button>
+            <button id="newMeas" class="btn btn-primary">Добавить</button>
         </div>
     </div>
 
-     <select size="2" class="selectData SelMeas">
+     <select id="SelMeas" size="2" class="selectData SelMeas">
         @if (ViewData["measuresList"] != null)
-         {
-        foreach (var meas in (List<OLAP.Models.Measure>)ViewData["measuresList"])
         {
+            foreach (var meas in (List<OLAP.Models.Measure>)ViewData["measuresList"])
+            {
             <option>@meas.Name</option>
         }
         }
     </select>
+
+<script>
+    $("#newMeas").click(function () {
+        var str = $("#newMeasName").val();
+        str = $.trim(str);
+        if (!str || !$("#newMeasSel option:selected").val() || !$.trim($("#newMeasDimName").val())) {
+            $("#newMeasError").show();
+            $("#newMeasName").focus();
+        } else {
+            $("#newMeasForm").submit();
+            $("#newMeasName").val() = "";
+        }
+    });
+
+    $("#SelMeas").change(function () {
+        if ($("#SelMeas").children().length == 0) {
+            $("#delMeas").addClass("disabled");
+        }
+        else {
+            $("#delMeas").removeClass("disabled");
+        }
+    });
+</script>
